test_axf: more parse elf or axf format py script

--- a/embedded/test_axf/MDK/adc_03_sa_interrupt.uvprojx
+++ b/embedded/test_axf/MDK/adc_03_sa_interrupt.uvprojx
@@ -48,14 +48,14 @@
             <NotGenerated>0</NotGenerated>
             <InvalidFlash>1</InvalidFlash>
           </TargetStatus>
-          <OutputDirectory>.\output\debug\</OutputDirectory>
+          <OutputDirectory>.\output\flashcode\</OutputDirectory>
           <OutputName>adc_03_sa_interrupt</OutputName>
           <CreateExecutable>1</CreateExecutable>
           <CreateLib>0</CreateLib>
           <CreateHexFile>1</CreateHexFile>
           <DebugInformation>1</DebugInformation>
           <BrowseInformation>1</BrowseInformation>
-          <ListingPath>.\output\debug\</ListingPath>
+          <ListingPath>.\output\flashcode\</ListingPath>
           <HexFormatSelection>1</HexFormatSelection>
           <Merge32K>0</Merge32K>
           <CreateBatchFile>0</CreateBatchFile>
@@ -472,14 +472,14 @@
             <NotGenerated>0</NotGenerated>
             <InvalidFlash>1</InvalidFlash>
           </TargetStatus>
-          <OutputDirectory>.\output\debug\</OutputDirectory>
+          <OutputDirectory>.\output\ramcode\</OutputDirectory>
           <OutputName>adc_03_sa_interrupt</OutputName>
           <CreateExecutable>1</CreateExecutable>
           <CreateLib>0</CreateLib>
           <CreateHexFile>1</CreateHexFile>
           <DebugInformation>1</DebugInformation>
           <BrowseInformation>1</BrowseInformation>
-          <ListingPath>.\output\debug\</ListingPath>
+          <ListingPath>.\output\ramcode\</ListingPath>
           <HexFormatSelection>1</HexFormatSelection>
           <Merge32K>0</Merge32K>
           <CreateBatchFile>0</CreateBatchFile>
