--- a/embedded/test_threadx/MDK/test_threadx.uvprojx
+++ b/embedded/test_threadx/MDK/test_threadx.uvprojx
@@ -49,7 +49,7 @@
             <InvalidFlash>1</InvalidFlash>
           </TargetStatus>
           <OutputDirectory>.\output\flashcode\</OutputDirectory>
-          <OutputName>adc_03_sa_interrupt</OutputName>
+          <OutputName>test_threadx</OutputName>
           <CreateExecutable>1</CreateExecutable>
           <CreateLib>0</CreateLib>
           <CreateHexFile>1</CreateHexFile>
