--- a/embedded/test_axf/MDK/adc_03_sa_interrupt.uvprojx
+++ b/embedded/test_axf/MDK/adc_03_sa_interrupt.uvprojx
@@ -413,6 +413,16 @@
               <FileType>1</FileType>
               <FilePath>..\driver\src\hc32f46x_icg.c</FilePath>
             </File>
+            <File>
+              <FileName>hc32f46x_interrupts.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\driver\src\hc32f46x_interrupts.c</FilePath>
+            </File>
+            <File>
+              <FileName>hc32f46x_utility.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\driver\src\hc32f46x_utility.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -836,6 +846,16 @@
               <FileName>hc32f46x_icg.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\driver\src\hc32f46x_icg.c</FilePath>
+            </File>
+            <File>
+              <FileName>hc32f46x_interrupts.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\driver\src\hc32f46x_interrupts.c</FilePath>
+            </File>
+            <File>
+              <FileName>hc32f46x_utility.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\driver\src\hc32f46x_utility.c</FilePath>
             </File>
           </Files>
         </Group>
