--- a/embedded/test_freertos/MDK/test_freertos.uvprojx
+++ b/embedded/test_freertos/MDK/test_freertos.uvprojx
@@ -10,8 +10,8 @@
       <TargetName>flashcode</TargetName>
       <ToolsetNumber>0x4</ToolsetNumber>
       <ToolsetName>ARM-ADS</ToolsetName>
-      <pCCUsed>6140001::V6.14.1::ARMCLANG</pCCUsed>
-      <uAC6>1</uAC6>
+      <pCCUsed>5060960::V5.06 update 7 (build 960)::.\ARMCC</pCCUsed>
+      <uAC6>0</uAC6>
       <TargetOption>
         <TargetCommonOption>
           <Device>HC32F460JEUA</Device>
@@ -300,8 +300,8 @@
               </OCR_RVCT8>
               <OCR_RVCT9>
                 <Type>0</Type>
-                <StartAddress>0x1fff8000</StartAddress>
-                <Size>0x2f000</Size>
+                <StartAddress>0x20000000</StartAddress>
+                <Size>0x20000</Size>
               </OCR_RVCT9>
               <OCR_RVCT10>
                 <Type>0</Type>
@@ -313,7 +313,7 @@
           </ArmAdsMisc>
           <Cads>
             <interw>1</interw>
-            <Optim>0</Optim>
+            <Optim>1</Optim>
             <oTime>0</oTime>
             <SplitLS>0</SplitLS>
             <OneElfS>1</OneElfS>
@@ -322,7 +322,7 @@
             <PlainCh>0</PlainCh>
             <Ropi>0</Ropi>
             <Rwpi>0</Rwpi>
-            <wLevel>3</wLevel>
+            <wLevel>2</wLevel>
             <uThumb>0</uThumb>
             <uSurpInc>0</uSurpInc>
             <uC99>1</uC99>
@@ -467,6 +467,11 @@
               <FileName>myusart.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\application\usart\myusart.c</FilePath>
+            </File>
+            <File>
+              <FileName>myled.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\application\led\myled.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -991,6 +996,11 @@
               <FileName>myusart.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\application\usart\myusart.c</FilePath>
+            </File>
+            <File>
+              <FileName>myled.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\application\led\myled.c</FilePath>
             </File>
           </Files>
         </Group>
