test_axf: list below
- rename project name
- fix ram size from 0x2E000 to 0x2F000(recovery)
- fix the SRAWC init value

--- a/embedded/test_axf/MDK/ram.ini
+++ b/embedded/test_axf/MDK/ram.ini
@@ -4,7 +4,9 @@ FUNC void Setup (void) {
     _WDWORD(0xE000ED08, 0x1FFF8000);  // Setup Vector Table Offset Register
 }
 
-LOAD output\ramcode\adc_03_sa_interrupt.axf INCREMENTAL                  //Download
+LOAD output\ramcode\ramcode.axf INCREMENTAL                  //Download
 Setup();                             // Setup forRunning
-g, main
+//g, main
+//g, SystemInit
+g, SET_SRAM3_WAIT
 
